--- a/L0-3JS读代码/demo.html
+++ b/L0-3JS读代码/demo.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <body>
         <!-- <script src="./promise01.js"></script> -->
-        <script src="./prototype01.js"></script>
+        <!-- <script src="./prototype01.js"></script> -->
+        <script src="./compile01.js"></script>
       </body>
   </head>
  
