--- a/L0-3JS读代码/demo.html
+++ b/L0-3JS读代码/demo.html
@@ -7,7 +7,8 @@
     <body>
         <!-- <script src="./promise01.js"></script> -->
         <!-- <script src="./prototype01.js"></script> -->
-        <script src="./compile01.js"></script>
+        <!-- <script src="./compile01.js"></script> -->
+        <script src="./compile02.js"></script>
       </body>
   </head>
  
